[package]
name = "tantivy-test"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tantivy = "0.21.1"
tempfile = "3.8.1" 
quick-xml = "0.31.0"
git2 = "0.18.1"
sqlx = { version = "0.7.3", features = ["runtime-tokio-rustls", "any", "macros", "any", "sqlite", "mysql", "postgres", "chrono"] }
futures = "0.3.30"
tokio = { version = "1.35.1", features = ["full"] }
anyhow = "1.0.76"
serde = { version = "1.0.193", features = ["derive"] }
serde_json = "1.0.108"
polytonic-greek = { git = "https://github.com/jeremymarch/polytonic-greek", version = "0.5.0" }
