[package]
name = "tantivy-test"
version = "2.0.19"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tantivy = "0.25.0"
tempfile = "3.13.0"
quick-xml = "0.36.2"
git2 = "0.19.0"
sqlx = { version = "0.8.2", features = ["runtime-tokio-rustls", "macros", "any", "sqlite", "mysql", "postgres"] }
futures = "0.3.31"
tokio = { version = "1.40.0", features = ["full"] }
anyhow = "1.0.89"
serde = { version = "1.0.210", features = ["derive"] }
serde_json = "1.0.128"
polytonic-greek = { git = "https://github.com/jeremymarch/polytonic-greek", version = "0.5.1" }
